packages/typ/tests/fixtures/diagnostics/0999_mli_module_path_unary_overapplied_10.mli.expected
File "0999_mli_module_path_unary_overapplied_10.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0999_mli_module_path_unary_overapplied_10 is not a valid module name.

File "0999_mli_module_path_unary_overapplied_10.mli", line 5, characters 14-35:
5 | val x_kappa : (int, bool) M_kappa.t
                  ^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor M_kappa.t expects 1 argument(s),
       but is here applied to 2 argument(s)
