packages/typ/tests/fixtures/diagnostics/0999_mli_module_path_unary_overapplied_10.mli
module M_kappa : sig
  type 'a t
end

val x_kappa : (int, bool) M_kappa.t
